--- a/Code/interferome/PCA_gene_lists_untreated.Rmd
+++ b/Code/interferome/PCA_gene_lists_untreated.Rmd
@@ -205,11 +205,12 @@ clinical_order <- read.csv("~/Documents/gitlab/Cario_RNASeq_Microbiom_Inte/DataP
 clinical_names <- c("Blood CD4 T Cell Counts (cells/ul)", "Plasma Viral Load", "Tissue HIV RNA (per CD4 T cell)",
                     "Tissue CD4 T Cell Counts (number/g)", "IL-6 (pg/ml)", "CRP (ug/ml)", "iFABP (pg/ml)",
                     "sCD27 (U/ml)", "CD14 (ng/ml)", "LPS (pg/ml)", "LTA (OD)", 
-                    base::paste("IFN", '\u03b1', sep = "" ),  base::paste("IFN", '\u03b2', sep = "" ))
+                    base::paste("IFN", '\u03b1', sep = "" ),  base::paste("IFN", '\u03b2', sep = "" ),
+                    "CD4 T cells (% viable CD45+ cells)")
 n_clinical <- length(clinical_names)
 clinical_names 
 n_clinical
-clinical_sum <- matrix(NA, 13,8)
+clinical_sum <- matrix(NA, 14,8)
 # genelists
 isgs <- as.data.frame(read.delim("coreISG"))
 genesbeta <- as.data.frame(read.delim("genesbeta"))
@@ -373,7 +374,7 @@ prcomp_wrapper <- function(data, gene_symbol, pheno, name){
               y = paste("PC1 (", round(pc.sd$Variance[1],2) ,"%", " Variance", ")", sep = "") , 
          caption = paste("IL-6 (pg/ml) vs PC1 for ", name ) )  +
          geom_point(aes(shape = pheno$txt, colour = pheno$txt), size = 2.5) +
-        geom_smooth(method = "loess", se = FALSE, colour = "black") +
+        # geom_smooth(method = "loess", se = FALSE, colour = "black") +
         geom_smooth(method = "lm", se = FALSE, colour = "black") +
         scale_color_manual(values=c("gray70", "Black"), 
                     name="Groups",
@@ -391,7 +392,7 @@ prcomp_wrapper <- function(data, gene_symbol, pheno, name){
               y = paste("PC1 (", round(pc.sd$Variance[1],2) ,"%", " Variance",")", sep = "") , 
          caption = paste("IFN-Beta vs PC1 for ", name ) )  +
          geom_point(aes(shape = pheno$txt, colour = pheno$txt), size = 2.5) +
-        geom_smooth(method = "loess", se = FALSE, colour = "black") +
+        # geom_smooth(method = "loess", se = FALSE, colour = "black") +
         geom_smooth(method = "lm", se = FALSE, colour = "black") +
         scale_color_manual(values=c("gray70", "Black"), 
                     name="Groups",
@@ -450,12 +451,19 @@ pc1_sum <- as.data.frame(pc1_sum)
 pc1_sum$p.value <- as.numeric(pc1_sum$p.value)
 pc1_sum$Gene.Lists <- c( rep("PC1 of Significantly Altered Core ISGs" ,14)  ,
                           rep("PC1 of Significantly Altered IFN-Beta Genes" ,14))
+kable(pc1_sum[, 1:3])
+pc1_sum$Clinical.Parameters
+
+pc1_sum$Clinical.Parameters <- factor(pc1_sum$Clinical.Parameters, 
+                                      levels=(pc1_sum$Clinical.Parameters)[order(c(1, 2, 10, 12, 3, 4, 5, 6, 7, 8, 9, 13, 14, 11))] )
 
 ggplot(data = pc1_sum, aes(x=Clinical.Parameters, y= Gene.Lists, fill= -log10(p.value)  ) ) + 
-  geom_tile(size = 2) +
-  theme_minimal() +
+  geom_tile(colour="white",size=0.2) +
+  # theme_minimal() +
+  theme_grey(base_size=10)+
   theme(axis.text.x = element_text(angle = 50, vjust = 1, 
                                    size = 10, hjust = 1)) +
+  # make the cells square
   coord_fixed() +
   xlab("") +
   ylab("") +
@@ -466,7 +474,7 @@ ggplot(data = pc1_sum, aes(x=Clinical.Parameters, y= Gene.Lists, fill= -log10(p.
                      breaks = round(c(0, -log10(0.05), -log10(0.01), -log10(0.001)),2) ) +
   scale_color_discrete(name = "") 
 
-kable(pc1_sum[, 1:3])
+
 
 ```
 
