--- a/Code/interferome/PCA_gene_lists_untreated.Rmd
+++ b/Code/interferome/PCA_gene_lists_untreated.Rmd
@@ -470,7 +470,7 @@ ggplot(data = pc1_sum, aes(x=Clinical.Parameters, y= Gene.Lists, fill= -log10(p.
   scale_fill_gradient2(low = "Black", high = "red", mid = "white", 
                        midpoint = -log10(0.05), limit = c(0,  max(-log10(pc1_sum$p.value)) ), 
                        space = "Lab", 
-                     name= expression(paste("-",log[10]," p value" )),
+                     name= expression(paste("-",log[10]," p-value" )),
                      breaks = round(c(0, -log10(0.05), -log10(0.01), -log10(0.001)),2) ) +
   scale_color_discrete(name = "") 
 
